--- a/package.json
+++ b/package.json
@@ -9,8 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.19",
+    "@mui/x-data-grid": "^6.18.3",
+    "@mui/x-tree-view": "^6.17.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "antd": "^5.11.1",
+    "axios": "^1.6.2",
+    "filesize": "^10.1.0",
+    "lodash": "^4.17.21",
+    "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-hook-form": "^7.48.2",
+    "react-redux": "^9.0.2"
   }
 }
