--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
-    "react-redux": "^9.0.2"
+    "react-redux": "^9.0.2",
+    "uuid": "^9.0.1"
   }
 }
